# AutonomousBlueye

./: .gitignore  README.md  object_detection.py  pid_log.csv  requirements.txt
Data/: blueye_native_dive_report_example.csv  dock_testing.csv  sea_trial.csv
Plots/: plot_pid_logs.py
datasets/: preprocess.py
install/: local_setup.sh  setup.sh
log/: latest_build
runs/train/exp/: mooring.yaml  results.csv
src/control/: package.xml  setup.py
src/control/control/: control.py  desired_velocity.py  desired_velocity_compass.py  desired_velocity_spiral_surge.py  desired_velocity_test.py
src/drone_sensors/: package.xml  setup.py
src/drone_sensors/drone_sensors/: BluEye_Force.py  BluEye_LED.py  BluEye_Pose.py  Blueye_LED.py  IMU_to_ros2.py  Old_video_code  Video_to_ros2.py  laptop_camera.py
src/experimental/: setup.cfg  setup.py
src/experimental/experimental/: Guided_Filter.py  Video_to_topic.py  Video_to_topic_no_trackbar.py  control_test.py
src/image_prosessing/: package.xml  setup.cfg  setup.py
src/image_prosessing/image_prosessing/: Canny_Yolo.py  Canny_edge_new.py  Canny_inside_yolo.py  Canny_yolo.py  Combined_detection.py  MarineSnowRemoval.py  Object_detection.py  Thresh_inside_yolo.py  adaptive_threshold.py  blueye_image_yolo.py  canny_with_box.py  (+6 more)
src/real_blueye_launch/: package.xml  setup.cfg  setup.py
src/robot_interfaces/: CMakeLists.txt
src/robot_interfaces/msg/: BoundingBox.msg  BoundingBoxes.msg  DVL.msg  DesiredVelocity.msg  RobotState.msg  YoloCannyChainPose.msg  YoloChainPose.msg
src/robot_interfaces/srv/: AddWaypoint.srv
(+734 files in other folders)
